--- a/jurnal/main.ipynb
+++ b/jurnal/main.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "Text(0.5, 1.0, 'Modus 9x9')"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -211,11 +211,7 @@
     "axes[1, 0].imshow(modus_3x3, cmap='gray')\n",
     "axes[1, 0].set_title('Modus 3x3')\n",
     "axes[1, 1].imshow(modus_9x9, cmap='gray')\n",
-    "axes[1, 1].set_title('Modus 9x9')\n",
-    "# axes[0, 2].imshow(median_3x3, cmap='gray')\n",
-    "# axes[0, 2].set_title('Median 3x3')\n",
-    "# axes[1, 2].imshow(median_9x9, cmap='gray')\n",
-    "# axes[1, 2].set_title('Median 9x9')"
+    "axes[1, 1].set_title('Modus 9x9')"
    ]
   }
  ],
